--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -50,7 +50,7 @@
               class="img-maskot"
               id="catImage"
               height="100"
-              src="../../public/cat.jpg"
+              src="../../public/cat_3.jpg"
               alt="Cat"
             />
             <div class="maskot-text">
