--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
-    <!-- Verknüpft das Stylesheet für das Design der Login-Seite -->
     <link rel="stylesheet" href="../styles/main.css" />
   </head>
   <body class="login-sec">
-    <!-- Container für das Login-Formular -->
+    <header>
+      <h1>Willkommen</h1>
+    </header>
     <div class="login-container">
       <h2>Login</h2>
-      <!-- Das Login-Formular -->
       <form id="loginForm">
-        <!-- Eingabefeld für den Benutzernamen -->
         <label for="username">Benutzername:</label>
         <input
           type="text"
@@ -33,15 +32,28 @@
           <span class="toggle-password" id="togglePassword">👁️</span>
         </div>
 
-        <!-- Login-Button -->
-        <div class="b-container"><button type="submit">Login</button></div>
+        <div class="b-container">
+          <button type="submit">Login</button>
+        </div>
       </form>
-      <div id="loginError">
-        <p></p>
+      <div
+        id="errorArea"
+        class="error-area"
+        style="text-align: center; margin-top: 2rem"
+      >
+        <p id="loginError" style="color: red"></p>
+        <div id="catImageContainer" style="display: none">
+          <img
+            id="catImage"
+            src="../../public/cat_3.jpg"
+            alt="Katze"
+            style="max-width: 200px; margin-top: 1rem"
+          />
+          <audio id="meowSound" src="../../public/meow_2.mp3"></audio>
+        </div>
       </div>
     </div>
 
-    <!-- Verknüpft die JavaScript-Datei, die das Login-Verhalten steuert -->
     <script src="../scripts/login.js"></script>
   </body>
 </html>
