--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -54,7 +54,7 @@
               alt="Cat"
             />
             <div class="maskot-text">
-              <p>Ähhh, hast du noch kein Assignment hochgeladen oder was?</p>
+              <p>Ähhh, hast du noch kein Assignment hochgeladen oder was? Du muss deinen Kurs auswählen.</p>
             </div>
           </div>
           <audio id="meowSound" src="../../public/meow_2.mp3"></audio>
